Refactor QueueProcessingApp to use Structured Streaming and replace in-memory RDD queue with rate source